# medi_duid_ai

./: .env.example  Dockerfile  README.md  app.py  benchmark_report.json  eval_suite.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setup.txt  tools.py
.github/workflows/: sync_to_hf.yml
fresh_app/: grader_script.py  pubspec.yaml
fresh_app/android/: build.gradle  gradle.properties
fresh_app/android/app/: build.gradle  proguard-rules.pro
fresh_app/assets/data/: medical_conditions.json
fresh_app/lib/: app.dart  main.dart
fresh_app/lib/core/constants/: app_strings.dart
fresh_app/lib/core/theme/: app_theme.dart
fresh_app/lib/core/utils/: animations.dart
fresh_app/lib/data/: accident_data.dart  medical_library.dart
fresh_app/lib/data/local/: database_helper.dart  mediguide_database.dart
fresh_app/lib/domain/entities/: medical_entities.dart
fresh_app/lib/presentation/screens/: accident_tab.dart  ai_dashboard_screen.dart  ai_integration_hub.dart  camera_screen.dart  condition_detail_screen.dart  demo_mode_screen.dart  disclaimer_screen.dart  emergency_screen.dart  emergency_timer_screen.dart  first_aid_assistant_screen.dart  health_history_screen.dart  home_screen.dart  input_screen.dart  neural_llm_brain_screen.dart  results_screen.dart  rural_emergency_screen.dart  rural_impact_screen.dart  settings_screen.dart  splash_screen.dart  (+1 more)
fresh_app/lib/services/: ai_brain_service.dart  ai_engine.dart  dependency_injection.dart  emergency_numbers_service.dart  medical_diagnosis_service.dart  ml_inference_engine.dart  multilingual_service.dart  offline_llm_brain.dart  offline_medical_database.dart  offline_ml_engine.dart  tensorflow_lite_service.dart
fresh_app/test/: widget_test.dart
mediguide/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
mediguide/server/: Dockerfile  __init__.py  app.py  mediguide_environment.py
mediguide_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openenv/: __init__.py  env.py  server.py
scripts/: validate-submission.sh
server/: app.py  environment.py
(+23 files in other folders)
