[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediguide_ai"
version = "1.0.0"
description = "MediGuide AI - OpenEnv Medical Diagnosis Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "gradio>=4.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "inference:main"

[tool.setuptools]
py-modules = ["inference"]