[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medi-guide-ai"
version = "0.1.0"
description = "AI Medical Guide Deployment"
dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "python-dotenv"
]

[project.scripts]
# This line solves the "Missing [project.scripts] server entry point" error
server = "app:app"
