# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediguide"
version = "0.1.0"
description = "Mediguide AI - Medical Diagnosis Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git@v0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "mediguide.server.app:main"

[tool.setuptools]
packages = ["mediguide", "mediguide.server"]
package-dir = {"mediguide" = ".", "mediguide.server" = "server"}